ultimos ajustes, funcionando flyway, jwt, token no swagger, docker-compose...